--- a/style.css
+++ b/style.css
@@ -1,85 +1,156 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-*{margin: 0; padding: 0; box-sizing: border-box;}
+
+
+/*Karakterkészlet importálása:*/
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
+/*CSS-reset:*/
+*{box-sizing: border-box; padding: 0; margin: 0;}
+
+/*Egyéb általános beállítások:*/
 body{
-    background-color: lightblue;
+    font-family: "Quicksand", sans-serif;
+    background-color: #778da9;
+}
+img{width: 100%;}
+
+/*A fő befoglaló keret beállításai:*/
+.wrapper{
+    width: 90%;
+    margin: 0 auto;
 }
 header{
-    height: 20vh;
     display: flex;
     justify-content: space-between;
+    padding:1rem 0;
     align-items: center;
 }
 header i{
-    font-size: 1.8rem;
-    padding: .5rem .9rem;
-    color: #fff;
-    background-color: rgb(84, 84, 171);
+    font-size: 2rem;
+    padding:.5rem .7rem;
+    background-color: #1b263b;
+    color:#fff;
     border-radius: 50%;
     z-index: 3;
 }
+/*Navigáció (menü)*/
 nav{
-    padding: 10rem  2rem 0 2rem;
+    padding: 10rem 2rem 0 2rem;
+    background-color: #1b263b;
     position: absolute;
-    top: 0;
-    background-color: #1b236b;
-    left: -200rem;
+    top:0;
     bottom: 0;
+    left: 0;  /*TODO*/
     z-index: 2;
+    transform: translateX(-100rem);
+    transition: transform 0.3s;
+}
+nav ul{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+
 }
 nav a{
     color: #fff;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+    background-color: #778da9;
+    padding: .2rem 1rem;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px;
-    display: flex;
-    justify-content: left;
-    background-color: rgb(97, 165, 225);
+}
+nav a:hover{
+    background-color: rgb(35, 81, 130);
 }
 nav ul{
     list-style-type: none;
+}
+
+.visibleNav{
+    transform: translateX(0);
+    transition: 0.5s;
+}
+
+/*A kosár kezelése:*/
+#carter{
     display: flex;
     flex-direction: column;
-    row-gap: 2rem;
-}
-.wrapper{
-    margin: 0 auto;
-    width: 90%;
-}
-main{
-    height: 50vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.container{
-    gap: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-}
-.button{
-    text-decoration: none;
+    padding: 10rem 2rem 0 2rem;
+    background-color: #1b263b;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    right: 0;  /*TODO*/
+    z-index: 2;
     color: #fff;
-    background-color: rgb(20, 113, 144);
-    padding: 3px 5px;
-    border-radius: 5px;
-    cursor: pointer;
+    transition: transfrom 0.3s;
+}
+
+.hiddenCart{
+    transform: translateY(-100rem);
+    transition: 0.5s;
+}
+
+.visibleCart{
+    transform: translateY(0);
+    transition: 0.5s;
+}
+
+h1{
+    text-transform: uppercase;
+    margin: 1.5rem 0;
+}
+
+/*A tartalmi rész, kártyák:*/
+.container{
+    display: flex;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
 }
 .card{
-    font-variant: small-caps;
-    scale: 1;
-    transition: 0.5s;
+    max-width: 22rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgb(13, 27, 42);
+    transition: scale, .3s;
 }
 .card:hover{
-    scale: 1.025;
-    transition: 0.5s;
+    scale:1.01;
 }
-.card-body {
+.card-header h3{
+    text-align: center;
+    font-size: 1.5rem;
+    letter-spacing: .2rem;
+}
+.card-header{
+    padding: .5rem 0;
+    background-color: #1b263b;
+    color:#fff;
+    font-variant: small-caps;
+    border-radius: 10px 10px 0 0;
+}
+.card-body{
+    padding: 1rem;
     display: flex;
     flex-direction: column;
+    row-gap: 1rem;
     align-items: center;
+
 }
-.kartya{
-    box-shadow: 1px 2px 10px #000;
+.card button{
+    background-color: #415a77;
+    color:#fff;
+    font-size: 1.1rem;
+    padding: .2rem 1rem;
+    border:none;
+    border-radius: 5px;
 }
+.card button:hover{
+    background-color: #1b263b;
+}
+#price{
+    font-weight: bold;
+}
+/*
+    const parkingOption = button.closest('.parking-option');
+    price = parkingOption.getAttribute('data-price');
+*/
